feat(backend + web): add marks
